--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -7,9 +7,9 @@ main:
     conference_short: IROS25
     conference: "IEEE/RSJ International Conference on Intelligent Robots and Systems (IROS), 2025."
     conference_zh: "IEEE/RSJ 智能机器人与系统国际会议 (IROS), 2025."
-    pdf: https://arxiv.org/pdf/2306.00988.pdf
+    # pdf: https://arxiv.org/pdf/2306.00988.pdf
     code: https://github.com/Liam-Xander/RMM-UAV-Exploration
-    bibtex: https://bib.yliu.me/MICCAI23.txt
+    # bibtex: https://bib.yliu.me/MICCAI23.txt
     image: ./assets/img/exploration.png
     video: https://youtu.be/xtwMVSegKxE
     notes: Oral Presentation
@@ -22,10 +22,10 @@ main:
     conference_short: IROS25
     conference: "IEEE/RSJ International Conference on Intelligent Robots and Systems (IROS), 2025."
     conference_zh: "IEEE/RSJ 智能机器人与系统国际会议 (IROS), 2025."
-    pdf: https://arxiv.org/pdf/2002.10211.pdf
-    code: https://github.com/Liam-Xander/RMM-UAV-Exploration
+    # pdf: https://arxiv.org/pdf/2002.10211.pdf
+    # code: https://github.com/Liam-Xander/RMM-UAV-Exploration
     page: https://class-il.mpi-inf.mpg.de/mnemonics/
-    bibtex: https://class-il.mpi-inf.mpg.de/mnemonics/
+    # bibtex: https://class-il.mpi-inf.mpg.de/mnemonics/
     notes: Oral Presentation
     image: ./assets/img/multi_uav.png
     video: https://youtu.be/eZcdj34zb84
@@ -40,7 +40,7 @@ main:
     image: ./assets/img/ral.png
     notes: "Accepted on May 22, 2025; * Corresponding author; † Co–first authors (Hongyu Nie and Xingyu Li)"
     notes_zh: "2025年5月22日接受；*通讯作者；†共同第一作者（聂宏宇和李星宇）"
-    video: https://youtu.be/eZcdj34zb84
+    # video: https://youtu.be/eZcdj34zb84
 
   - title: "Unified Linear Parametric Map Modeling and Perception-aware Trajectory Planning for Mobile Robotics"
     title_zh: "面向移动机器人的统一线性参数化地图建模与感知-规划一体化"
@@ -53,4 +53,4 @@ main:
     pdf: https://arxiv.org/abs/2507.09340
     notes: "Currently available on arXiv; * Corresponding author; † Co–first authors (Hongyu Nie and Xingyu Li)"
     notes_zh: "目前可在 arXiv 上获取；*通讯作者；†共同第一作者（聂宏宇和李星宇）"
-    video: https://youtu.be/eZcdj34zb84
+    # video: https://youtu.be/eZcdj34zb84
