--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -24,7 +24,7 @@ main:
     conference_zh: "IEEE/RSJ 智能机器人与系统国际会议 (IROS), 2025."
     # pdf: https://arxiv.org/pdf/2002.10211.pdf
     # code: https://github.com/Liam-Xander/RMM-UAV-Exploration
-    page: https://class-il.mpi-inf.mpg.de/mnemonics/
+    # page: https://class-il.mpi-inf.mpg.de/mnemonics/
     # bibtex: https://class-il.mpi-inf.mpg.de/mnemonics/
     notes: Oral Presentation
     image: ./assets/img/multi_uav.png
