--- a/_data/publications.yml
+++ b/_data/publications.yml
@@ -3,7 +3,7 @@ main:
   - title: Real-Time Occupancy Grid Mapping Using RMM on Large-scale and Unstructured Environments
     title_zh: 在大型非结构化环境中使用RMM进行实时占据栅格建图
     authors: "<strong>Xingyu Li*</strong>, Haoxuan Xu, Xingrui Liu, Zhaotong Tan (*Corresponding authors)"
-    authors_zh: "<strong>李星宇</strong>, 徐浩轩, 刘兴瑞, 谭朝勇 (*通讯作者)"
+    authors_zh: "<strong>李星宇*</strong>, 徐浩轩, 刘兴瑞, 谭赵彤 (*通讯作者)"
     conference_short: IROS25
     conference: "IEEE/RSJ International Conference on Intelligent Robots and Systems (IROS), 2025."
     conference_zh: "IEEE/RSJ 智能机器人与系统国际会议 (IROS), 2025."
@@ -18,7 +18,7 @@ main:
   - title: "GeoSafe: A Unified Unconstrained Multi-DOF Optimization Framework for Multi-UAV Cooperative Hoisting and Obstacle Avoidance"
     title_zh: "GeoSafe: 一种用于多无人机协同吊装和避障的统一无约束多自由度优化框架"
     authors: "<strong>Xingyu Li</strong>, Hongyu Nie, Xu Liu, Haoxuan Xu, Xingrui Liu, Zhaotong Tan, Chunyu Jiang, Yang Feng, Sen Mei* (*Corresponding authors)"
-    authors_zh: "<strong>李星宇</strong>, 聂宏宇, 刘旭, 徐浩轩, 刘兴瑞, 谭朝勇, 蒋春余, 冯旸, 梅森* (*通讯作者)"
+    authors_zh: "<strong>李星宇</strong>, 聂虹宇, 刘旭, 徐浩轩, 刘兴瑞, 谭赵彤, 蒋春余, 冯旸, 梅森* (*通讯作者)"
     conference_short: IROS25
     conference: "IEEE/RSJ International Conference on Intelligent Robots and Systems (IROS), 2025."
     conference_zh: "IEEE/RSJ 智能机器人与系统国际会议 (IROS), 2025."
@@ -46,7 +46,7 @@ main:
   - title: "Unified Linear Parametric Map Modeling and Perception-aware Trajectory Planning for Mobile Robotics"
     title_zh: "面向移动机器人的统一线性参数化地图建模与感知-规划一体化"
     authors: "<strong>Hongyu Nie*†</strong>, <strong>Xingyu Li†</strong>, Xu Liu, Zhaotong Tan, Sen Mei, Wenbo Su"
-    authors_zh: "<strong>聂宏宇†</strong>, <strong>李星宇†</strong>, 刘旭*, 谭朝勇, 梅森, 苏文博"
+    authors_zh: "<strong>聂宏宇*†</strong>, <strong>李星宇†</strong>, 刘旭, 谭朝勇, 梅森, 苏文博"
     conference_short: Available on arXiv
     conference: "Available on arXiv, v1.0"
     conference_zh: "Available on arXiv, v1.0"
